# homeassistant-homevolt-local

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  .ruff.toml  .tool-versions  .yamllint  AGENTS.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.env
.github/: copilot-instructions.md  labels.yml  release-drafter.yml  renovate.json
.github/scripts/: calculate_version.py  generate_changelog.py
.github/skills/homeassistant-integration/: SKILL.md
.github/skills/homevolt-api/: API_DOCUMENTATION.md  PARAMETERS_REFERENCE.md  SKILL.md
.github/workflows/: auto-approve-renovate.yml  backend.yml  ci.yaml  ci.yml  label-check.yml  pre-release-drafter.yml  release-drafter.yml  release.yml  validation.yml
config/: configuration.yaml
custom_components/homevolt_local/: __init__.py  config_flow.py  const.py  coordinator.py  discovery.py  manifest.json  models.py  sensor.py  services.yaml  strings.json
custom_components/homevolt_local/tests/: test_config_flow.py  test_coordinator.py  test_init.py  test_models.py  test_sensor.py  test_utils.py
scripts/: develop  setup  update_manifest_version.py
tests/: conftest.py  test_calculate_version.py  test_config_flow.py  test_coordinator.py  test_coordinator_merge.py  test_discovery.py  test_generate_changelog.py  test_init.py  test_models.py  test_sensor.py
tests/__snapshots__/: test_sensor.ambr
tests/fixtures/: ems_response.json  schedule_response.txt
tests/snapshots/: test_sensor.ambr
(+1 files in other folders)
